Fixing additional contrast issues

--- a/cms/static/sass/_base-v2.scss
+++ b/cms/static/sass/_base-v2.scss
@@ -6,8 +6,8 @@ html {
 
 body {
   min-width: $fg-min-width;
-  background: $gray-l5;
-  color: $gray-d2;
+  background: rgb(245, 245, 245); // UXPL grayscale, x-back
+  color: $gray-d3;
 }
 
 footer.primary{
