--- a/cms/static/sass/_base.scss
+++ b/cms/static/sass/_base.scss
@@ -28,7 +28,7 @@ html {
 body {
   @extend %t-copy-base;
   min-width: $fg-min-width;
-  background: $gray-l5;
+  background: rgb(245, 245, 245); // UXPL grayscale, x-back
   color: $gray-d2;
 }
 
