--- a/cms/static/sass/elements-v2/_sock.scss
+++ b/cms/static/sass/elements-v2/_sock.scss
@@ -27,10 +27,10 @@
 
     .cta-show-sock {
       @extend %ui-btn-pill;
-      background: $gray-l5;
+      background: rgb(245, 245, 245); // UXPL graycale, x-back
       font-size: font-size(x-small);
       padding: ($baseline/2) $baseline;
-      color: $gray;
+      color: $gray-d3;
 
       .icon {
         @include margin-right($baseline/4);
