--- a/cms/static/sass/views/_settings.scss
+++ b/cms/static/sass/views/_settings.scss
@@ -522,7 +522,7 @@
       .current-course-image {
         margin-bottom: ($baseline/2);
         padding: ($baseline/2) $baseline;
-        background: $gray-l5;
+        background: $gray-l6;
         text-align: center;
 
         .wrapper-course-image {
